--- a/elitetracker-api/package.json
+++ b/elitetracker-api/package.json
@@ -19,6 +19,7 @@
 	"description": "api para o elite-tracker",
 	"devDependencies": {
 		"@biomejs/biome": "2.0.0",
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
 		"@types/jsonwebtoken": "^9.0.10",
 		"tsx": "^4.20.3",
@@ -26,6 +27,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.10.0",
+		"cors": "^2.8.5",
 		"dayjs": "^1.11.13",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
