--- a/elitetracker-front/package.json
+++ b/elitetracker-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "axios": "^1.10.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.2",
     "react": "^19.1.0",
